# kubeic-operator

./: .dockerignore  .gitignore  .releaserc.json  LICENSE  README.md  ROADMAP.md  data.json  kind-config.yaml  pyproject.toml
.github/workflows/: ci.yml  release-pr.yml  release.yml  sync-alpha.yml
config/crd/: imageauditpolicy.yaml
helm/kubeic-operator/: Chart.yaml  values.yaml
helm/kubeic-operator/dashboards/: image-audit-dashboard.json
helm/kubeic-operator/templates/: _helpers.tpl  (+9 more)
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_39bd8661a4a8d358_prerelease_py.html  z_39bd8661a4a8d358_spread_py.html  z_74cafd21b35a398d_namespace_py.html  z_74cafd21b35a398d_policy_py.html  z_89b678d1308f16f1_availability_py.html  z_89b678d1308f16f1_credentials_py.html  z_89b678d1308f16f1_main_py.html  z_a69dd2bc987b549e_cleanup_py.html  z_a69dd2bc987b549e_deployer_py.html  z_a69dd2bc987b549e_main_py.html  z_a69dd2bc987b549e_metrics_py.html
kubeic_checker/: Dockerfile  availability.py  credentials.py  main.py
kubeic_operator/: Dockerfile  cleanup.py  deployer.py  main.py  metrics.py
kubeic_operator/checks/: prerelease.py  spread.py
kubeic_operator/handlers/: namespace.py  policy.py
tests/integration/: conftest.py  test_checker.py  test_crd.py  test_metrics.py  test_operator.py  test_reconcile.py
tests/unit/: test_availability.py  test_checker_main.py  test_cleanup.py  test_credentials.py  test_deployer.py  test_metrics.py  test_namespace_handler.py  test_policy_handler.py  test_prerelease.py  test_reconcile.py  test_spread.py
